[package]
name = "server"
version = "0.1.0"
authors = ["Maliha <maliha.babar97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = "0.2"
http = "0.2"
tokio-util = { version = "0.6", features = ["codec"] }
#tokio = { version = "1.1.1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio = { version = "1.1.1", features = ["full"] }
futures = "0.3"

tracing = { version = "0.1.13", default-features = false, features = ["std"] }
bytes = "1"
env_logger = { version = "0.5.3", default-features = false }